Fix header issue (based on page flex) for some mobile device (no more fixed header on tablet)

--- a/web.bitRepublic/client/sass/components/_hero-banner.scss
+++ b/web.bitRepublic/client/sass/components/_hero-banner.scss
@@ -73,7 +73,6 @@
 
   @include breakpoint($md) {
     background-image: none;
-    padding-top: 100px;
   }
 
   @include breakpoint($lg) {
