--- a/web.bitRepublic/client/sass/layout/_layout.scss
+++ b/web.bitRepublic/client/sass/layout/_layout.scss
@@ -3,10 +3,18 @@
   All default layout styles
 \*------------------------------------*/
 
-* {
+// Box Sizing "Reset"
+html {
   box-sizing: border-box;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+// Layout
 html, body {
   height: 100%;
 }
@@ -20,7 +28,7 @@ body {
 .page {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
+  // height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
 }
 
 .page__content {
